Correctly spacing the draw nav opener.

--- a/src/assets/css/components/_draw-nav.scss
+++ b/src/assets/css/components/_draw-nav.scss
@@ -31,10 +31,20 @@
   }
 
   @include element('opener') {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
     @extend %btn-hollow;
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 10px;
+    width: 90px;
+    transform: translateY(-50%);
+    text-align: center;
+    outline: 0;
+    font-size: 2rem;
+    &:focus,
+    &:active {
+      outline: 0;
+    }
   }
 
   @include element('quick-actions') {
